# RTOS-Real-Time-Operating-System-

./: CMakeLists.txt  CMakePresets.json  Documentatie_Tehnica_ITSC_RTOS.docx  README.md  arm-toolchain.cmake  linker.ld  rtos_config.h  startup.c
include/: hal.h  rtos.h  rtos_internal.h  stm32f4xx.h
scripts/: debug_qemu.sh  run_qemu.sh
src/: hal_gpio.c  hal_uart.c  main.c  rtos_kernel.c  rtos_port.c  rtos_sync.c  rtos_task.c  rtos_timer.c
